--- a/jisr_almaharat/programming_module/doctype/application/application.json
+++ b/jisr_almaharat/programming_module/doctype/application/application.json
@@ -6,53 +6,33 @@
  "doctype": "DocType",
  "engine": "InnoDB",
  "field_order": [
-  "applaction_section",
+  "applactopm_information",
+  "application_name",
+  "column_break_jgap",
+  "kind",
+  "applicant_information_section",
   "applicant_name",
-  "email",
   "phone",
-  "job",
-  "training",
+  "email",
   "cv"
  ],
  "fields": [
   {
-   "fieldname": "applaction_section",
-   "fieldtype": "Section Break",
-   "label": "Applaction"
-  },
-  {
-   "fieldname": "applicant_name",
-   "fieldtype": "Data",
-   "in_list_view": 1,
-   "label": "Applicant_Name",
-   "reqd": 1
-  },
-  {
    "fieldname": "email",
-   "fieldtype": "Link",
+   "fieldtype": "Data",
    "in_list_view": 1,
    "label": "Email",
    "options": "User1",
    "reqd": 1
   },
   {
+   "fetch_from": "email.phone_number",
    "fieldname": "phone",
-   "fieldtype": "Int",
+   "fieldtype": "Data",
    "in_list_view": 1,
    "label": "Phone",
+   "options": "User1",
    "reqd": 1
-  },
-  {
-   "fieldname": "job",
-   "fieldtype": "Link",
-   "label": "Job",
-   "options": "Job"
-  },
-  {
-   "fieldname": "training",
-   "fieldtype": "Link",
-   "label": "Training",
-   "options": "Training"
   },
   {
    "fieldname": "cv",
@@ -60,11 +40,45 @@
    "in_list_view": 1,
    "label": "CV",
    "reqd": 1
+  },
+  {
+   "fieldname": "application_name",
+   "fieldtype": "Data",
+   "in_list_view": 1,
+   "label": "Application_Name",
+   "reqd": 1
+  },
+  {
+   "fieldname": "applactopm_information",
+   "fieldtype": "Section Break",
+   "label": "Applaction Information"
+  },
+  {
+   "fieldname": "column_break_jgap",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "kind",
+   "fieldtype": "Select",
+   "label": "Kind",
+   "options": "Job\nTraining"
+  },
+  {
+   "fieldname": "applicant_information_section",
+   "fieldtype": "Section Break",
+   "label": "Applicant Information"
+  },
+  {
+   "fetch_from": "email.name1",
+   "fieldname": "applicant_name",
+   "fieldtype": "Data",
+   "label": "Applicant Name",
+   "options": "User1"
   }
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-01-01 20:53:54.182703",
+ "modified": "2025-01-04 17:45:32.315002",
  "modified_by": "Administrator",
  "module": "programming module",
  "name": "Application",
