--- a/jisr_almaharat/programming_module/web_form/application/application.json
+++ b/jisr_almaharat/programming_module/web_form/application/application.json
@@ -6,19 +6,21 @@
  "allow_multiple": 0,
  "allow_print": 0,
  "anonymous": 0,
- "apply_document_permissions": 0,
- "button_label": "Apply",
- "creation": "2025-01-25 00:14:47.534338",
+ "apply_document_permissions": 1,
+ "button_label": "Save",
+ "client_script": "",
+ "condition_json": "[]",
+ "creation": "2025-01-27 00:02:27.592805",
+ "custom_css": ".form-container {\n    background-color: #f9f9f9;\n    padding: 20px;\n    border: 1px solid #ddd;\n    border-radius: 8px;\n    max-width: 600px;\n    margin: auto;\n}\n\n/* Style labels */\n.form-container .control-label {\n    font-weight: bold;\n    color: #333;\n}\n\n/* Style input fields */\n.form-container .control-input {\n    width: 100%;\n    padding: 10px;\n    border: 1px solid #ccc;\n    border-radius: 4px;\n    margin-bottom: 15px;\n}\n\n/* Customize the save button */\n.form-container .btn-primary {\n    background-color: #007bff;\n    border-color: #0056b3;\n    color: white;\n    padding: 10px 15px;\n    border-radius: 4px;\n}\n\n/* Hover effect for the save button */\n.form-container .btn-primary:hover {\n    background-color: #0056b3;\n}",
  "doc_type": "Application",
  "docstatus": 0,
  "doctype": "Web Form",
  "idx": 0,
- "introduction_text": "<div class=\"ql-editor read-mode\"><p>Apply New </p></div>",
  "is_standard": 1,
  "list_columns": [],
  "login_required": 0,
  "max_attachment_size": 0,
- "modified": "2025-01-25 14:33:45.005257",
+ "modified": "2025-01-29 00:29:07.432122",
  "modified_by": "Administrator",
  "module": "programming module",
  "name": "application",
@@ -28,9 +30,23 @@
  "show_attachments": 0,
  "show_list": 0,
  "show_sidebar": 0,
- "success_url": "",
+ "success_message": "Thinks for your time, Please checks your email the for response ",
+ "success_title": "Successfully ",
+ "success_url": "/",
  "title": "Application",
  "web_form_fields": [
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "applactopm_information",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Applaction Information",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
   {
    "allow_read_on_all_link_options": 0,
    "fieldname": "application_name",
@@ -46,6 +62,17 @@
   },
   {
    "allow_read_on_all_link_options": 0,
+   "fieldname": "column_break_jgap",
+   "fieldtype": "Column Break",
+   "hidden": 0,
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
    "fieldname": "kind",
    "fieldtype": "Select",
    "hidden": 1,
@@ -53,6 +80,18 @@
    "max_length": 0,
    "max_value": 0,
    "options": "Job\nTraining",
+   "read_only": 0,
+   "reqd": 1,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "applicant_information_section",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Applicant Information",
+   "max_length": 0,
+   "max_value": 0,
    "read_only": 0,
    "reqd": 0,
    "show_in_filter": 0
@@ -108,5 +147,6 @@
    "reqd": 0,
    "show_in_filter": 0
   }
- ]
+ ],
+ "website_sidebar": ""
 }
