--- a/jisr_almaharat/programming_module/web_form/appling/appling.json
+++ b/jisr_almaharat/programming_module/web_form/appling/appling.json
@@ -6,30 +6,29 @@
  "allow_multiple": 0,
  "allow_print": 0,
  "anonymous": 0,
- "apply_document_permissions": 0,
+ "apply_document_permissions": 1,
  "button_label": "Save",
  "condition_json": "[]",
- "creation": "2025-02-02 22:25:00.899708",
+ "creation": "2025-02-02 22:32:17.442628",
  "doc_type": "Application",
  "docstatus": 0,
  "doctype": "Web Form",
  "idx": 0,
- "introduction_text": "<div class=\"ql-editor read-mode\"><p>Please fill in the form below</p></div>",
  "is_standard": 1,
  "list_columns": [],
  "login_required": 0,
  "max_attachment_size": 0,
- "modified": "2025-02-02 22:25:37.096105",
+ "modified": "2025-02-05 01:04:24.429489",
  "modified_by": "Administrator",
  "module": "programming module",
- "name": "application",
+ "name": "appling",
  "owner": "Administrator",
  "published": 1,
- "route": "applications",
+ "route": "appling",
  "show_attachments": 0,
  "show_list": 0,
  "show_sidebar": 0,
- "title": "Applications",
+ "title": "Appling",
  "web_form_fields": [
   {
    "allow_read_on_all_link_options": 0,
@@ -45,6 +44,32 @@
   },
   {
    "allow_read_on_all_link_options": 0,
+   "fieldname": "job_name",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "label": "Job Name",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "Job",
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "training_name",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "label": "Training Name",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "Training",
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
    "fieldname": "kind",
    "fieldtype": "Select",
    "hidden": 0,
@@ -54,17 +79,6 @@
    "options": "Job\nTraining",
    "read_only": 0,
    "reqd": 1,
-   "show_in_filter": 0
-  },
-  {
-   "allow_read_on_all_link_options": 0,
-   "fieldname": "column_break_jgap",
-   "fieldtype": "Column Break",
-   "hidden": 0,
-   "max_length": 0,
-   "max_value": 0,
-   "read_only": 0,
-   "reqd": 0,
    "show_in_filter": 0
   },
   {
@@ -127,19 +141,6 @@
    "max_length": 0,
    "max_value": 0,
    "read_only": 0,
-   "reqd": 0,
-   "show_in_filter": 0
-  },
-  {
-   "allow_read_on_all_link_options": 0,
-   "fieldname": "amended_from",
-   "fieldtype": "Link",
-   "hidden": 0,
-   "label": "Amended From",
-   "max_length": 0,
-   "max_value": 0,
-   "options": "Application",
-   "read_only": 1,
    "reqd": 0,
    "show_in_filter": 0
   }
