--- a/jisr_almaharat/programming_module/web_form/appling/appling.json
+++ b/jisr_almaharat/programming_module/web_form/appling/appling.json
@@ -6,10 +6,11 @@
  "allow_multiple": 0,
  "allow_print": 0,
  "anonymous": 0,
- "apply_document_permissions": 1,
+ "apply_document_permissions": 0,
+ "breadcrumbs": "",
  "button_label": "Save",
  "condition_json": "[]",
- "creation": "2025-02-02 22:32:17.442628",
+ "creation": "2025-03-16 22:48:25.011549",
  "doc_type": "Application",
  "docstatus": 0,
  "doctype": "Web Form",
@@ -18,7 +19,7 @@
  "list_columns": [],
  "login_required": 0,
  "max_attachment_size": 0,
- "modified": "2025-02-05 01:04:24.429489",
+ "modified": "2025-03-17 00:02:29.146313",
  "modified_by": "Administrator",
  "module": "programming module",
  "name": "appling",
@@ -28,14 +29,78 @@
  "show_attachments": 0,
  "show_list": 0,
  "show_sidebar": 0,
+ "success_title": "You application send",
+ "success_url": "/app/user-dashboard",
  "title": "Appling",
  "web_form_fields": [
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "organization_information_section",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Organization Information",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "organization_name",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Organization Name",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "Organization",
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "organization_email",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Organization Email",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "Email",
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
   {
    "allow_read_on_all_link_options": 0,
    "fieldname": "applactopm_information",
    "fieldtype": "Section Break",
    "hidden": 0,
    "label": "Applaction Information",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "kind",
+   "fieldtype": "Select",
+   "hidden": 0,
+   "label": "Kind",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "Job\nTraining",
+   "read_only": 0,
+   "reqd": 1,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "column_break_jgap",
+   "fieldtype": "Column Break",
+   "hidden": 0,
    "max_length": 0,
    "max_value": 0,
    "read_only": 0,
@@ -66,19 +131,6 @@
    "options": "Training",
    "read_only": 0,
    "reqd": 0,
-   "show_in_filter": 0
-  },
-  {
-   "allow_read_on_all_link_options": 0,
-   "fieldname": "kind",
-   "fieldtype": "Select",
-   "hidden": 0,
-   "label": "Kind",
-   "max_length": 0,
-   "max_value": 0,
-   "options": "Job\nTraining",
-   "read_only": 0,
-   "reqd": 1,
    "show_in_filter": 0
   },
   {
@@ -116,7 +168,7 @@
    "max_value": 0,
    "options": "User1",
    "read_only": 0,
-   "reqd": 1,
+   "reqd": 0,
    "show_in_filter": 0
   },
   {
@@ -127,9 +179,119 @@
    "label": "Email",
    "max_length": 0,
    "max_value": 0,
-   "options": "User1",
+   "options": "Email",
    "read_only": 0,
    "reqd": 1,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "address",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Address",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "educational_section",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Educational",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "default": "",
+   "fieldname": "degree",
+   "fieldtype": "Select",
+   "hidden": 0,
+   "label": "Degree",
+   "max_length": 0,
+   "max_value": 0,
+   "options": "High school\nDiploma\nBachelor's\nMaster",
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "major_of_study",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Major of study",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "graduation_year",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Graduation year",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "work_experience_section",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Work Experience",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "company_name_that_you_worked_in",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Company Name That you worked in",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "your_position_at_work",
+   "fieldtype": "Data",
+   "hidden": 0,
+   "label": "Your position at work",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
+   "show_in_filter": 0
+  },
+  {
+   "allow_read_on_all_link_options": 0,
+   "fieldname": "attachments_section",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "label": "Attachments",
+   "max_length": 0,
+   "max_value": 0,
+   "read_only": 0,
+   "reqd": 0,
    "show_in_filter": 0
   },
   {
